@@ -685,3 +685,5 @@ in 0.1.13.
 - Structure.sld_profile; MagneticSlab can now be first or last Component,
   it's not mandatory for it to be a Slab.
 - Improve Orso model_language ingestion.
+- Fixed critical bug in LipidLeafletGuest. The overall weighting of guest and
+  tails wasn't being done correctly.
